@startuml DiagrammaClassi

skinparam {
    HorizontalSpacing 30
    VerticalSpacing 30
}

class Sistema {
  +registrati()
  +accedi()
}

class UtenteRegistrato {
  - nome
  - cognome
  - email
  - password
  + modificaProfilo()
}

class Profilo {
  - username
  - biografia
  - immagineProfilo
  - dataDiNascita
}

class Autore {
  + creaPoesia()
  + creaRaccolta()
  + mettiCuore()
  + scriviCommento()
}

class Amministratore {
  + generaReport()
}

class Poesia {
  - titolo
  - testo
  - tag
  - visibilità
}

class Cuore {

}

class Raccolta {
  - titolo
  - descrizione
}


class Commento {
  - testo
  - data
}

Sistema "0..*" -- "1" UtenteRegistrato
UtenteRegistrato "1" *-left- "1" Profilo
UtenteRegistrato <|-- Autore
UtenteRegistrato <|-right- Amministratore
Autore "0..*" --> "1" Poesia: pubblica
Poesia "0..*" *-- "1" Commento
Poesia "1" *-right- "1" Cuore
Autore "      0..*" --> "1" Commento: scrive
Autore "0..*" --> "1" Cuore: mette
Raccolta "0..*" *-up- "1" Poesia
Autore "0..*" --> "1" Raccolta: crea
@enduml